Feb 12: login feature initialized

--- a/ins/public/index.html
+++ b/ins/public/index.html
@@ -57,6 +57,7 @@
       });
       $('.tooltipped').tooltip();
       $('.scrollspy').scrollSpy();
+      $('.tabs').tabs();
     });
   </script>
 </body>
