Feb 21: User page frame created; setting page created which shows user info (grabbed from firebase) and allows user to update password; Restrict access of protected routes for non-authenticated users(home,settings,account)

--- a/ins/public/index.html
+++ b/ins/public/index.html
@@ -67,6 +67,7 @@
       $('.tooltipped').tooltip();
       $('.scrollspy').scrollSpy();
       $('.tabs').tabs();
+      $(".dropdown-trigger").dropdown();
     });
   </script>
 
